Changelog
=========


1.3.3 (unreleased)
------------------

- Remedy PTSTranslationDomain deprecation warning.
  [jone]

- Remedy five:implements deprecation warning.
  [jone]


1.3.2 (2012-05-09)
------------------

- Improve contact view. Use tables to display the contact informations.
  [Julian Infanger]


1.3.1 (2012-03-19)
------------------

- Hide Website lable in contactlisting if there's no website.
  [mathias.leimgruber]

- Show function on contactlisting.
  [mathias.leimgruber]


1.3 (2012-03-05)
----------------

- Show contenttype class in contact tab if there is no icon.
  Icon helper should not return a image if no icon is defined for this type.
  [Julian Infanger]

- Do show map only if ZIP and city are set
  [mathias.leimgruber]

- Wrap icon class around contacts icon in tab.
  [Julian Infanger]

- fix default allowed types
  [mathias.leimgruber]

- Set default allowed type for textareas to text/plain.
  [mathias.leimgruber]


1.2 (2011-12-07)
----------------

- Issue #509 Googlemap aktivieren bei Detailansicht des Kontaktes
  https://extranet.4teamwork.ch/intranet/10-interne-projekte/4teamwork-egov/tracker-4teamwork-egov/509
  enabled google maps on contact.
  [24.06.2011, jinfanger]

1.1.9 (30.12.2011)
------------------

- Show URL in folder_contacts_listing
  [24.06.2011, mathias.leimgruber]

1.1.8
-----
- Few improvements in memberblock_view, memberview and contact_view
  [31.05.2011, mathias.leimgruber]

1.1.7
-----

- Translations / Improve contact view.
  [09.05.2011, mathias.leimgruber]

1.1.6
-----
- Added private phone number / display private address on contact view.
  [03.05.2011, mathias.leimgruber]

- Code cleanup (contact.py member.py) / translations
  [28.04.2011, mathias.leimgruber]

- Slightly changed contact detail view according to ruetis requirements
  [20.04.2011, florian.sprenger]

1.1.5
-----
- Bugfix: Check for contact reference.
  [17.02.2011, mathias.leimgruber]

1.1.4
-----