@@ -5,6 +5,9 @@ Changelog
 1.3.3 (unreleased)
 ------------------
 
+- Contact tab: enable reset table configuration action, define column widths.
+  [jone]
+
 - Remedy PTSTranslationDomain deprecation warning.
   [jone]
 
